@@ -131,14 +131,14 @@ fi
 # Defaults:
 
 DEFAULT_INT10="x86emu"
-xorg_bus_sbus="no"
+xorg_bus_sparc="no"
 xorg_bus_ix86pci="no"
 
 # Override defaults as needed for specific platforms:
 
 case $host_cpu in
   sparc*)
-  	xorg_bus_sbus="yes"
+	xorg_bus_sparc="yes"
 	xorg_loader_sparcmuldiv="yes"
 	;;
   i*86)
@@ -698,8 +698,6 @@ test x$XORG = xyes && case $host_os in
 	  ia64*)
 		linux_ia64=yes
 		;;
-          sparc*)
-	  	linux_sparc=yes
 		;;
 	  *)
 		;;
@@ -794,10 +792,9 @@ AC_SUBST([XORG_OS_SUBDIR])
 AC_SUBST([XORG_OS_KBD])
 AC_SUBST([XORG_OS_PCI])
 AM_CONDITIONAL([XORG_BUS_IX86PCI], [test "x$xorg_bus_ix86pci" = xyes])
-AM_CONDITIONAL([XORG_BUS_SBUS], [test "x$xorg_bus_sbus" = xyes])
+AM_CONDITIONAL([XORG_BUS_SPARC], [test "x$xorg_bus_sparc" = xyes])
 AM_CONDITIONAL([XORG_LOADER_SPARC], [test "x$xorg_loader_sparcmuldiv" = xyes])
 AM_CONDITIONAL([LINUX_IA64], [test "x$linux_ia64" = xyes])
-AM_CONDITIONAL([LINUX_SPARC], [test "x$linux_sparc" = xyes])
 AM_CONDITIONAL([SOLARIS_USL_CONSOLE], [test "x$solaris_usl_console" = xyes])
 AM_CONDITIONAL([SOLARIS_ASM_INLINE], [test "x$solaris_asm_inline" = xyes])
 
